--- a/pagina html/index.html
+++ b/pagina html/index.html
@@ -18,7 +18,7 @@
             <div id="hora"></div>
     
         <div>
-            <p><h1 class="card" style="background-color: transparent; padding: 0;">Redes Sociais</h1></H1></p>
+            <p><h1 style="background-color: transparent; padding: 0;">Redes Sociais</h1></H1></p>
             <p>
                 <a href="https://github.com/Rogire" target="_blank" rel="external"><img src="imagens/github.png" alt="gito" style="width:25px ; height:25px ;"> GitHub</a>
                 <a href="https://twitter.com/Rogire1" target="_blank" rel="external"><img src="imagens/baixados.png" alt="tt" style="width:25px ; height:25px ;"> Twitter </a><br>
