--- a/pagina html/index.html
+++ b/pagina html/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <Header>
-            <h1><strong><ins>Teste</ins></strong></h1>
+            <h1><strong><ins>Olá</ins></strong></h1>
         </Header>
         
         <h2>Estou criando essa página para exercitar minhas habilidades em html, css e js</h2> <hr >
