--- a/pagina html/index.html
+++ b/pagina html/index.html
@@ -55,7 +55,9 @@
                 <button id="ler"> Ler mais </button>
             </div>
     
-    
+    <p class='link'>
+        <a class="texto" href="pág02.html"><img class="img" src="imagens/a frente.png" alt="seta"> ir para a página 02</a>
+    </p>
 
 
 <footer> Igor&copy; </footer>
