--- a/pagina html/pág02.html
+++ b/pagina html/pág02.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
+    <div>
+        alguns projetos que já fiz:
+        <ul>
+            <li><a href="NCV2/newcalcV2.html"> Calculadora</a></li>
+        </ul>
+    </div>
+    <p class="link"><a style="text-align: right; transform: translateY(35rem);" href="index.html">
+        <img class='img'src="imagens/atras.png" alt="atras">Voltar para a página 01</a></p>
     <script src="js.js"></script>
 </body>
 </html>
